--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <div class="bodytest">333</div>
+    <script src="https://cdn.bootcss.com/vue/2.5.18/vue.min.js"></script>
   </body>
 </html>
